@@ -1,8 +1,8 @@
 Package: roger
 Type: Package
 Title: Automated Grading of R Scripts
-Version: 1.0-0
-Date: 2022-08-25
+Version: 1.1-0
+Date: 2022-09-26
 Authors@R: c(person("Vincent", "Goulet", role = c("aut", "cre"),
                     email = "vincent.goulet@act.ulaval.ca"),
              person("Samuel", "Fréchette", role = "aut"),
@@ -23,11 +23,11 @@ URL: https://roger-project.gitlab.io
 BugReports: https://gitlab.com/roger-project/roger-rpkg/-/issues
 Encoding: UTF-8
 NeedsCompilation: no
-Packaged: 2022-08-25 18:33:54 UTC; vincent
+Packaged: 2022-09-26 23:56:34 UTC; vincent
 Author: Vincent Goulet [aut, cre],
   Samuel Fréchette [aut],
   Jean-Christophe Langlois [aut],
   Jim Hester [ctb]
 Maintainer: Vincent Goulet <vincent.goulet@act.ulaval.ca>
 Repository: CRAN
-Date/Publication: 2022-08-25 19:00:02 UTC
+Date/Publication: 2022-09-27 02:10:02 UTC
