@@ -1,9 +1,9 @@
-439e13cd0230044456c896c5527b0a0b *DESCRIPTION
-befc5c619a9ffa4ab3cb26e6156e897a *NAMESPACE
+925ca78f3bde946ed38e35d8b921c290 *DESCRIPTION
+7ba41a6e54b278a42f857725b1186dd6 *NAMESPACE
 642b3e4f9becc130b86fa61fe1f2dd8d *R/assignment_style.R
 660382037c6692b7370fce43c6630050 *R/commas_style.R
 8a27aef96166944a290d84fe66927cf1 *R/curly_braces_style.R
-02ecc8f8c19a02114e894b63d697d50c *R/documentation.R
+aed1d2d731e2ab6f79caceff25936797 *R/documentation.R
 ad8fb6fc60a38105535112c63352993d *R/getParseFun.R
 96af108b68131994c66802e5aed9deba *R/getParseParent.R
 e95a67ab41c3779a4c91487dd156458b *R/getSourceData.R
@@ -16,13 +16,13 @@ f504a1c3c9b39b7d474473302390bc5b *R/square_brackets_style.R
 a3cdf19aca0f91ed15b538aae1eb8472 *R/trailing_blank_lines_style.R
 920c0ca600a041352ee5fa8524b8a699 *R/trailing_whitespace_style.R
 25d012abdf778a3c073d39039b36dcce *R/unneeded_concatenation_style.R
-0d7da7b9b8cfd788f6a1f09218dfa301 *inst/NEWS.Rd
+23841bf259f3e9cd7005f993d3f4b689 *inst/NEWS.Rd
 ff5ddbac6a43735ba6fe8bb0f1c38653 *inst/po/en@quot/LC_MESSAGES/R-roger.mo
 329ddeb73a2ab724a27b04f82608a22d *inst/po/fr/LC_MESSAGES/R-roger.mo
 99842f5b245cd2d2eac841e6cbe84497 *man/assignment_style.Rd
 9eb20d59915800295c0a094a76e7e716 *man/commas_style.Rd
 41dbfc28dd734cc81f850cc9d1cb0f8c *man/curly_braces_style.Rd
-de20b6a527728a45b599892a5a2d8a7f *man/documentation.Rd
+2bd93208bf227a975051c1d625a5424e *man/documentation.Rd
 ca800970dd11a4f5b6a394578f8ebd90 *man/getSourceData.Rd
 65cd28ab9c39029fd17e23954a4bae7f *man/line_length_style.Rd
 5fbf4dc17e1ee536b36c6e87aa82f3f7 *man/nomagic_style.Rd
@@ -35,7 +35,7 @@ fe5268e48634c9d7b2aaa48a303f702e *man/square_brackets_style.Rd
 a778686c3486c28a48cd32a454bd96ca *man/unneeded_concatenation_style.Rd
 c01da7acb77d8c22216b355ceb6c797f *po/R-fr.po
 2a26ae3225f35ab8d9d4b91501e34868 *po/R-roger.pot
-2fd2f8fc79d2e48dbed7d1378a3019f2 *tests/documentation-tests.R
+6aef86dff8d0a5f36687094288ed8726 *tests/documentation-tests.R
 2843511ce8d693a1bd2d2150c61aca74 *tests/getParseFun-tests.R
 5a8b407c242d7dafbf772921522561e5 *tests/getParseParent-tests.R
 ae652ca01beb8e421cda07114ee5120b *tests/interface-tests.R
